Mindre endringer etter kommentar #deploy-backend-dev